# Firmia

./: .env.example  .eslintrc.json  .gitignore  .npmignore  BUILD_TEST_REPORT.md  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_VERIFICATION.md  LAUNCH_INSTRUCTIONS.md  LICENSE  README.md  TEST_REPORT.md  commit_and_push.sh  firmia-PRD.md  git_status_summary.sh  jest.config.js  launch.sh  launch_verify_push.sh  mcp-firms-1.0.0.tgz  package-lock.json  package.json  pantheon-prp-20250120.md  pantheon.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_working.txt  test-insee-auth.js  test-mcp-tools.js  test_full_server.py  test_mcp_server.py  test_server.py  tsconfig.build.json  tsconfig.json
deployment/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
deployment/k8s/: configmap.yaml  deployment.yaml  service.yaml
docs/: API.md  CONTRIBUTING.md  INSEE_API_MIGRATION.md  INSTALLATION.md
docs/adapters/: banque-france.md  inpi.md
docs/examples/: advanced-usage.md  basic-usage.md  mcp-integration.md  use-cases.md
examples/: banque-france-usage.ts
src/: __init__.py  config.py  index.ts  logging_config.py  server.py  server_demo.py  server_full.py  server_new.py
src/adapters/: banque-france.ts  index.ts  inpi.ts  insee.ts
src/adapters/__tests__/: banque-france.test.ts  inpi.test.ts
src/analytics/: __init__.py  analyzer.py  health_score.py  trends.py
src/api/: __init__.py  api_entreprise.py  base.py  bodacc.py  inpi_rne.py  insee_sirene.py  recherche_entreprises.py  rge.py  rna.py
src/auth/: __init__.py  base.py  jwt.py  manager.py  oauth2.py
src/cache/: __init__.py  duckdb_cache.py  index.ts  manager.py  redis_cache.py
src/models/: __init__.py  announcement.py  association.py  certification.py  company.py  document.py  events.py
src/pipeline/: __init__.py  etl.py  scheduler.py
src/privacy/: __init__.py  audit.py  filters.py
src/rate-limiter/: index.ts
src/resilience/: __init__.py  circuit_breaker.py  retry.py
src/tools/: check_certifications.py  company_analytics.py  download_document.py  export_data.py  get_company_profile.py  search_associations.py  search_companies.py  search_legal_announcements.py
src/types/: index.ts
src/utils/: index.ts
tests/: __init__.py  conftest.py  index.test.ts  utils.test.ts
tests/adapters/: banque-france.test.ts  inpi.test.ts  insee.test.ts
tests/cache/: cache.test.ts
tests/e2e/: mcp-tools.test.ts
tests/edge-cases/: error-handling.test.ts  rate-limiter-edge-cases.test.ts
tests/fixtures/: enhanced-mock-data.ts  index.ts
tests/integration/: __init__.py  mcp-server.test.ts  multi-adapter-coordination.test.ts  test_analytics.py  test_company_profile.py  test_document_download.py  test_extended_apis.py  test_mcp_server.py  test_search_companies.py
tests/performance/: benchmark.test.ts  concurrent.test.ts  load-test.test.ts
tests/rate-limiter/: rate-limiter.test.ts
tests/unit/: test_auth.py  test_cache.py  test_privacy.py  test_resilience.py
web-ui/: package-lock.json  package.json  server.js
web-ui/public/: app.js  index.html
